# Homework5-COS397

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  sorting_algorithms.py
.github/workflows/: main.yml
basic_sort_UNIQUE_SUFFIX/: int_sort.py
basic_sort_shell_software/: int_sort.py
basic_sort_shell_software/basic_sort_shell_software.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_package_exercise/basic_sort_UNIQUE_SUFFIX/: int_sort.py
test/: int_sort.py  test_basic_sort.py
workflows/: main.yml
